'closed' problem fixed. tests working for validation of metadata.

--- a/tests/test_files/invalid/metadata/datatype/file007.toml
+++ b/tests/test_files/invalid/metadata/datatype/file007.toml
@@ -1,6 +1,6 @@
-title = "Example Title"
-description = "An example description"
+title = "Invalid Datatype for CreatedOn"
+description = "This file has an invalid datatype for 'createdOn'."
 version = "1.0"
-createdBy = "John Doe"
-createdOn = "2023-10-10T12:00:00Z"
-baseURI = "not-a-valid-uri"
+createdBy = "Alice Doe"
+createdOn = "Yesterday"
+baseURI = "https://example.com/laderr#"
