--- a/tests/test_files/invalid/metadata/datatype/file007.toml
+++ b/tests/test_files/invalid/metadata/datatype/file007.toml
@@ -3,4 +3,4 @@ description = "This file has an invalid datatype for 'createdOn'."
 version = "1.0"
 createdBy = "Alice Doe"
 createdOn = "Yesterday"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
