--- a/tests/test_files/valid/file005.toml
+++ b/tests/test_files/valid/file005.toml
@@ -4,4 +4,4 @@ version = "1.2"
 createdBy = "John Smith"
 createdOn = "2023-05-01T12:00:00+01:00"
 modifiedOn = "2023-05-10T12:00:00+01:00"
-baseURI = "https://laderr.org/schema#"
+baseUri = "https://laderr.org/schema#"
