--- a/tests/test_files/invalid/metadata/datatype/file003.toml
+++ b/tests/test_files/invalid/metadata/datatype/file003.toml
@@ -3,4 +3,4 @@ description = "An example description"
 version = true
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
