--- a/tests/test_files/invalid/metadata/datatype/file005.toml
+++ b/tests/test_files/invalid/metadata/datatype/file005.toml
@@ -3,4 +3,4 @@ description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "10/10/2023 12:00"  # Invalid format
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
