--- a/tests/test_files/invalid/metadata/datatype/file006.toml
+++ b/tests/test_files/invalid/metadata/datatype/file006.toml
@@ -4,4 +4,4 @@ version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
 modifiedOn = "10-10-2023"  # Invalid format
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
