--- a/tests/test_files/invalid/metadata/datatype/file008.toml
+++ b/tests/test_files/invalid/metadata/datatype/file008.toml
@@ -3,4 +3,4 @@ createdOn = "10-10-2023 12:00:00"  # Invalid datatype: Should be xsd:dateTime
 description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
