--- a/tests/test_files/invalid/metadata/multiplicity/file004.toml
+++ b/tests/test_files/invalid/metadata/multiplicity/file004.toml
@@ -3,4 +3,4 @@ description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
 createdOn = ["2023-10-10T12:00:00Z", "2023-10-11T12:00:00Z"]
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
