--- a/tests/test_files/invalid/metadata/multiplicity/file007.toml
+++ b/tests/test_files/invalid/metadata/multiplicity/file007.toml
@@ -3,4 +3,4 @@ description = ["Description1", "Description2"]
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
-baseURI = ["https://example1.com", "https://example2.com"]
+baseUri = ["https://example1.com", "https://example2.com"]
