--- a/tests/test_files/invalid/metadata/multiplicity/file010.toml
+++ b/tests/test_files/invalid/metadata/multiplicity/file010.toml
@@ -4,4 +4,4 @@ version = ["1.0", "2.0"]
 createdBy = "John Doe"
 createdOn = ["2023-10-10T12:00:00Z", "2023-10-11T12:00:00Z"]
 modifiedOn = ["2023-10-12T12:00:00Z", "2023-10-13T12:00:00Z"]
-baseURI = ["https://example1.com", "https://example2.com"]
+baseUri = ["https://example1.com", "https://example2.com"]
