--- a/tests/test_files/invalid/metadata/undefined/file002.toml
+++ b/tests/test_files/invalid/metadata/undefined/file002.toml
@@ -3,5 +3,5 @@ description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
 extraMetadata = 12345  # Integer type for an undefined element
