--- a/tests/test_files/invalid/metadata/undefined/file003.toml
+++ b/tests/test_files/invalid/metadata/undefined/file003.toml
@@ -3,6 +3,6 @@ description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
 invalidField1 = "Extra value"
 invalidField2 = "Another extra value"
