--- a/tests/test_files/invalid/metadata/undefined/file004.toml
+++ b/tests/test_files/invalid/metadata/undefined/file004.toml
@@ -3,7 +3,7 @@ description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
 invalidKey = "This is not allowed"
 extraField = 42
 anotherExtraField = "Extra string"
