--- a/tests/test_files/valid/file001.toml
+++ b/tests/test_files/valid/file001.toml
@@ -3,4 +3,4 @@ description = "This is a basic valid example."
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-01-01T12:00:00Z"
-baseURI = "https://example.com/laderr#"
+baseUri = "https://example.com/laderr#"
