--- a/tests/test_files/valid/file003.toml
+++ b/tests/test_files/valid/file003.toml
@@ -3,4 +3,4 @@ version = "1.1"
 createdBy = "Alice"
 createdOn = "2023-03-01T12:00:00Z"
 modifiedOn = "2023-03-10T12:00:00Z"
-baseURI = "https://example.org/laderr#"
+baseUri = "https://example.org/laderr#"
