--- a/tests/test_files/valid/file007.toml
+++ b/tests/test_files/valid/file007.toml
@@ -3,4 +3,4 @@ description = "An example description"
 version = "1.0"
 createdBy = "John Doe"
 createdOn = "2023-10-10T12:00:00Z"
-baseURI = "not-a-valid-uri" # will be converted to default
+baseUri = "not-a-valid-uri" # will be converted to default
