--- a/tests/test_files/valid/file010.toml
+++ b/tests/test_files/valid/file010.toml
@@ -4,4 +4,4 @@ version = "6.0"
 createdBy = "Future Author"
 createdOn = "2023-10-01T12:00:00Z"
 modifiedOn = "2024-01-01T12:00:00Z"
-baseURI = "https://future.example/laderr#"
+baseUri = "https://future.example/laderr#"
